[package]
name = "dev-widgets"
version = "0.2.0"
edition = "2021"
description = "Dev Widgets"
readme = "README.md"
build = "build.rs"

[build-dependencies]
curl = "0.4"
grass = "0.13"
zip-extract = "0.1"

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
cidr = "0.2.3"
digest = "0.10"
dioxus-free-icons = { version = "0.8", features = ["bootstrap"] }
dioxus-router = "0.5.0"
md-5 = "0.10"
num-traits = "0.2"
qrcode-generator = "4.1.9"
sha1 = "0.10"
sha2 = "0.10"
strum = "0.26"
strum_macros = "0.26"
uuid = { version = "1.9", features = ["v4", "fast-rng"] }
time-tz = { version = "2.0", features = ["db", "system"] }
log = { version = "0.4", features = ["std"] }
color_processing = "0.6"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dioxus = {version = "0.5.1", features = ["desktop"]}
getrandom = "0.2"
time = "0.3"

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus = {version = "0.5.1", features = ["web"]}
getrandom = { version = "0.2", features = ["js"] }
time = { version = "0.3", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2.92", features = ["enable-interning"] }
wasm-logger = "0.2.0"

[profile.release]
lto = true # Use Link-Time-Optimization
codegen-units = 1 # Fewer codegen units to increase optimizations.
panic = "abort" # Aborting strips the stack unwind code from the binary.

[target.'cfg(not(any(target_os = "windows", target_os = "none")))'.profile.release]
strip = true  # Automatically strip symbols from the binary. Only available for *nix targets.

[package.metadata.bundle]
name = "Dev Widgets"
identifier = "com.esimkowitz.devwidgets"
version = "0.2.0"
resources = ["public/**/*"]
copyright = "Copyright (c) Evan Simkowitz 2024. All rights reserved."
category = "Developer Tool"
short_description = "A set of helpful widgets written in Rust."
osx_url_schemes = ["com.esimkowitz.devwidgets"]
