[package]
name = "dev-widgets"
version = "0.3.0"
edition = "2021"
description = "Dev Widgets"
readme = "README.md"
build = "build.rs"

[build-dependencies]
curl = "0.4"
grass = "0.13"
zip-extract = "0.2"

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
cidr = "0.3.0"
digest = "0.10"
dioxus-free-icons = { version = "0.9", features = ["bootstrap"] }
dioxus-router = "0.6.3"
md-5 = "0.10"
num-traits = "0.2"
qrcode-generator = "5.0.0"
sha1 = "0.10"
sha2 = "0.10"
strum = "0.27"
strum_macros = "0.27"
time-tz = { version = "2.0", features = ["db", "system"] }
log = { version = "0.4", features = ["std"] }
color_processing = "0.6"
manganis = "0.6.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dioxus = {version = "0.6.3", features = ["desktop"]}
uuid = { version = "1.16", features = ["v4", "v7", "rng-getrandom"] }
getrandom = "0.3"
time = "0.3"

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus = {version = "0.6.1", features = ["web"]}
getrandom = { version = "0.3", features = ["wasm_js"] }
time = { version = "0.3", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2.100", features = ["enable-interning"] }
wasm-logger = "0.2.0"
uuid = { version = "1.15", features = ["v4", "v7", "rng-getrandom", "js"] }


[profile.release]
lto = true # Use Link-Time-Optimization
codegen-units = 1 # Fewer codegen units to increase optimizations.
panic = "abort" # Aborting strips the stack unwind code from the binary.

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[target.'cfg(not(any(target_os = "windows", target_os = "none")))'.profile.release]
strip = true  # Automatically strip symbols from the binary. Only available for *nix targets.

[package.metadata.bundle]
name = "Dev Widgets"
identifier = "com.esimkowitz.devwidgets"
version = "0.3.0"
resources = ["public/**/*"]
copyright = "Copyright (c) Evan Simkowitz 2025. All rights reserved."
category = "Developer Tool"
short_description = "A set of helpful widgets written in Rust."
osx_url_schemes = ["com.esimkowitz.devwidgets"]
